--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -4,31 +4,40 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Onliine Bookshelf</title>
+  <title>Online Bookshelf</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
   <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
-  <div class="flex-column justify-space-around">
-    <header class="display-flex justify-space-between align-center p-2">
-      <h1>
-        <a href="/">Online Bookshelf</a>
-      </h1>
-      <nav>
-        {{#if logged_in}}
-        <a href="/profile">Profile</a> |
-        <button class="no-button" id="logout">Logout</button>
-        {{else}}
-        <a href="/login">Login</a>
-        {{/if}}
-      </nav>
+  <div class="container">
+    <header class="row">
+      <div class="three columns">
+        <h1><a href="/">Online Bookshelf</a></h1>
+      </div>
+      <div class="nine columns">
+        <nav>
+          {{#if logged_in}}
+          <a href="/profile">Profile</a> |
+          <button class="no-button" id="logout">Logout</button>
+          {{else}}
+          <a href="/login">Login</a>
+          {{/if}}
+        </nav>
+      </div>
     </header>
-    <main class="container container-fluid mt-5">
-      {{{ body }}}
+    <main class="row">
+      <div class="six columns">
+        {{{ body }}}
+      </div>
+      <div class="six columns">
+        <!-- Second column content goes here -->
+      </div>
     </main>
     <footer>
       
     </footer>
+    {{{ body }}}
   </div>
   {{#if logged_in}}
   <script src="/js/logout.js"></script>
