--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +7,6 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
   <link rel="stylesheet" href="/css/style.css">
 </head>
-
 <body>
   <div class="container">
     <header class="row">
@@ -18,30 +16,37 @@
       <div class="nine columns">
         <nav>
           {{#if logged_in}}
-          <a href="/profile">Profile</a> |
-          <button class="no-button" id="logout">Logout</button>
+            <a href="/profile">Profile</a> |
+            <button class="no-button" id="logout">Logout</button>
           {{else}}
-          <a href="/login">Login</a>
+            <a href="/login">Login</a>
           {{/if}}
         </nav>
       </div>
     </header>
     <main class="row">
-      <div class="six columns">
-        {{{ body }}}
-      </div>
-      <div class="six columns">
-        <!-- Second column content goes here -->
+      <div class="twelve columns">
+        <h2>Books</h2>
+        <div class="books-container">
+          {{#each books}}
+            <div class="book">
+              <h3>{{this.title}}</h3>
+              <p><strong>Author:</strong> {{this.author}}</p>
+              <p><strong>Genre:</strong> {{this.genre}}</p>
+              <p>{{this.description}}</p>
+              <img src="{{this.thumbnail}}" alt="{{this.title}}">
+            </div>
+          {{/each}}
+        </div>
       </div>
     </main>
     <footer>
       
     </footer>
-    {{{ body }}}
   </div>
   {{#if logged_in}}
-  <script src="/js/logout.js"></script>
+    <script src="/js/logout.js"></script>
   {{/if}}
 </body>
-
 </html>
+
