--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,39 +1,39 @@
 <div class="row">
-  <div class="col-md-6">
+  <div class="">
     <h2>Login</h2>
 
-    <form class="form login-form">
+    <form class="form login">
       <div class="form-group">
-        <label for="email-login">Email:</label>
-        <input class="form-input" type="text" id="email-login" />
+        <label for="email">Email:</label>
+        <input class="form-input" type="text" id="email" />
       </div>
       <div class="form-group">
-        <label for="password-login">Password:</label>
-        <input class="form-input" type="password" id="password-login" />
+        <label for="password">Password:</label>
+        <input class="form-input" type="password" id="password" />
       </div>
       <div class="form-group">
-        <button class="btn btn-primary" type="submit">Login</button>
+        <button class="btn" type="submit">Login</button>
       </div>
     </form>
   </div>
-  <div class="col-md-6">
+  <div class="">
     <h2>New to our bookshelf? Signup!</h2>
 
-    <form class="form signup-form">
+    <form class="form signup">
       <div class="form-group">
-        <label for="name-signup">Username:</label>
-        <input class="form-input" type="text" id="name-signup" />
+        <label for="name">Username:</label>
+        <input class="form-input" type="text" id="name" />
       </div>
       <div class="form-group">
-        <label for="email-signup">Email:</label>
-        <input class="form-input" type="text" id="email-signup" />
+        <label for="signup-email">Email:</label>
+        <input class="form-input" type="text" id="signup-email" />
       </div>
       <div class="form-group">
-        <label for="password-signup">Password:</label>
-        <input class="form-input" type="password" id="password-signup" />
+        <label for="signup-password">Password:</label>
+        <input class="form-input" type="password" id="signup-password" />
       </div>
       <div class="form-group">
-        <button class="btn btn-primary" type="submit">Signup!</button>
+        <button class="btn" type="submit">Signup!</button>
       </div>
     </form>
   </div>
