started work on explore page

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -24,7 +24,8 @@
         </nav>
       </div>
     </header>
-    <main class="row">
+    {{{ body }}}
+    {{!-- <main class="row">
       <div class="twelve columns">
         <h2>Books</h2>
         <div class="books-container">
@@ -39,7 +40,7 @@
           {{/each}}
         </div>
       </div>
-    </main>
+    </main> --}}
     <footer>
       
     </footer>
