--- a/views/book.handlebars
+++ b/views/book.handlebars
@@ -5,7 +5,7 @@
                 <h3>{{this.title}}</h3>
                 <p><strong>Author:</strong> {{this.author}}</p>
                 <p><strong>Genre:</strong> {{this.genre}}</p>
-                <p>{{this.description}}</p>
+                <p><strong>Description:</strong>{{this.description}}</p>
                 <img src="{{this.thumbnail}}" alt="{{this.title}}">
                 <!-- Read count input -->
                 <div class="read-count-container">
