--- a/views/book.handlebars
+++ b/views/book.handlebars
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="three columns book-container">
+    <div class="twelve columns book-container">
         <div class="card book">
             <div class="card-content">
                 <h3>{{this.title}}</h3>
