--- a/views/book.handlebars
+++ b/views/book.handlebars
@@ -20,6 +20,23 @@
     </div>
 </div>
 
+ <div class="text-center">
+                <h3>Comments</h3>
+                {{#each comments as |comment| }}
+                    <div class="card shadow p-3 mb-2">
+                        <p>{{comment.comment_body}} by {{comment.user.name}} on {{comment.date_created}}</p>
+                        <button data-id="{{comment.id}}" class="delete">Delete Comment</button>
+                    </div>
+                {{/each}}
+            </div>
+        </div>
+    </div>
+</div>
+
+{{> comment-form }}
+
+<script src="/comment.js"></script>
+<script src="/editReadCount.js"></script>
 <script src="/deleteBook.js"></script>
 
 
