--- a/views/book.handlebars
+++ b/views/book.handlebars
@@ -17,24 +17,25 @@
                 <button class="button delete-btn" data-book-id="{{this.book_id}}">Delete</button>
             </div>
         </div>
-    </div>
-</div>
+        
+        <!-- Comments Section -->
+        <div class="comments-section">
+            <h3>Comments</h3>
+            {{#each comments as |comment| }}
+                <div class="card shadow p-3 mb-2">
+                    <p>{{comment.comment_body}} by {{comment.user.name}} on {{comment.date_created}}</p>
+                    <button data-id="{{comment.id}}" class="delete">Delete Comment</button>
+                </div>
+            {{/each}}
+        </div>
 
-
- <div class="text-center">
-                <h3>Comments</h3>
-                {{#each comments as |comment| }}
-                    <div class="card shadow p-3 mb-2">
-                        <p>{{comment.comment_body}} by {{comment.user.name}} on {{comment.date_created}}</p>
-                        <button data-id="{{comment.id}}" class="delete">Delete Comment</button>
-                    </div>
-                {{/each}}
-            </div>
+        <!-- Comment Form -->
+        <div class="comment-form-container">
+            {{> comment-form }}
         </div>
     </div>
 </div>
 
-{{> comment-form }}
 
 <script src="/comment.js"></script>
 <script src="/editReadCount.js"></script>
