--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,31 +9,33 @@
 </head>
 <body>
   <div class="container">
-    <header class="navBar">
-      <nav>
-        {{#if logged_in}}
-        <a href="/">Bookshelf</a>
-        <a href="/explore">Explore</a>
-        <button class="no-button" id="logout">Logout</button>
-        {{else}}
-        <a href="/">Bookshelf</a>
-        <a href="/explore">Explore</a>
-        <a href="/login">Login</a>
-        {{/if}}
-      </nav>
-
-    <h1 class="text-center">Online Bookshelf</h1>
+    <header class="row">
+      <div class="twelve columns">
+        <nav class="u-pull-right">
+          {{#if logged_in}}
+          <a href="/" class="button">Bookshelf</a>
+          <a href="/explore" class="button">Explore</a>
+          <button id="logout" class="button-primary">Logout</button>
+          {{else}}
+          <a href="/" class="button">Bookshelf</a>
+          <a href="/explore" class="button">Explore</a>
+          <a href="/login" class="button">Login</a>
+          {{/if}}
+        </nav>
+        <h1 class="text-center">Online Bookshelf</h1>
+      </div>
     </header>
 
-    <main>
-      {{{body}}}
+    <main class="row">
+      <div class="twelve columns">
+        {{{body}}}
+      </div>
     </main>
   </div>
 
   {{#if logged_in}}
   <script src="/logout.js"></script>
   {{/if}}
-
 </body>
-
 </html>
+
