--- a/public/style.css
+++ b/public/style.css
@@ -2,7 +2,7 @@
 body {
     margin: 0;
     padding: 0; 
-    overflow-x: hidden; /* Prevent horizontal scrolling */
+    overflow-x: hidden; 
   }
 
 .container {
@@ -14,20 +14,20 @@ body {
   }
  main {
   width: 100%;
-  margin-left: 150px; /* You might adjust this value as needed */
+  margin-left: 150px; 
   margin-top: 10px;
 }
 
 
 .comments-section, .comment-form-container {
     width: 100%;
-    max-width: 600px; /* Adjust as needed */
+    max-width: 600px; 
     margin-top: 5px;
-    margin-bottom: 0; /* Add space between book content and comments */
+    margin-bottom: 0; 
 }
 
 .comments-section {
-    margin-bottom: 20px; /* Add space between comments and comment form */
+    margin-bottom: 20px; 
 }
 
 .comments-section h3 {
