--- a/public/style.css
+++ b/public/style.css
@@ -1,64 +1,24 @@
-/* Custom CSS for book cards */
 body {
-    margin: 0;
-    padding: 0; 
-    overflow-x: hidden; 
-  }
-
-.container {
-    width: 100vw; 
-    margin: 0; 
-    padding: 0; 
+    margin: 15px;
+    padding: 35px;
     
-    
-  }
- main {
-  width: 100%;
-  margin-left: 150px; 
-  margin-top: 10px;
 }
 
-
-.comments-section, .comment-form-container {
-    width: 100%;
-    max-width: 600px; 
-    margin-top: 5px;
-    margin-bottom: 0; 
-}
-
-.comments-section {
-    margin-bottom: 20px; 
-}
-
-.comments-section h3 {
-    margin-bottom: 0;
+h1 {
+    padding-top: 20px;
 }
 
 nav {
-    margin-top: 15px;
-    margin-right: 75px;
-
+    padding-top: 35px;
+    padding-right: 5px;
 }
-
-header {
-   padding-top: 30px;
-   padding-bottom: 15px;
-   background-color: #f4f4f4;
-   width: 100vw;
-
-
-}
-h1 {
-    margin-left: 50px;
-}
-
 
 .card.book {
     background-color: #f4f4f4;
     border: 1px solid #ddd;
     border-radius: 5px;
     padding: 20px;
-    margin-bottom: 20px;
+    margin-bottom: 25px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     position: relative;
 }
@@ -76,6 +36,18 @@ h1 {
     max-width: 100%;
     height: auto;
     margin-top: 10px;
+}
+
+.book-link {
+    text-decoration: none; /* Remove underline */
+    color: inherit; /* Inherit the text color */
+    font-weight: normal; /* Set font weight to normal */
+}
+
+.homepage-books-container .card.book{
+    margin-bottom: 30px;
+    height: 300px;
+    text-align: center;
 }
 
 .add-to-collection-btn {
@@ -103,6 +75,59 @@ h1 {
 .read-count-container input {
     width: 50px; /* Adjust the width as needed */
 }
+
+/* Ensure the .row class has a negative margin for proper alignment */
+.row {
+    margin-left: -15px;
+    margin-right: -15px;
+}
+
+/* Define the columns for medium and large screens */
+.column,
+.columns {
+    width: 100%;
+    float: left;
+    padding-left: 15px;
+    padding-right: 15px;
+    box-sizing: border-box;
+}
+
+/* Define column widths for large screens */
+.one-third.column { width: 33.3333333333%; }
+
+/* Remove left margin for the first card in each row */
+.books-container .columns:nth-child(3n+1) {
+    margin-left: 0;
+}
+
+@media (max-width: 767px) {
+    .books-container .columns {
+        width: 100%; /* Display one card per row on small screens */
+        float: none; /* Remove float to ensure one card per row */
+        padding-left: 0;
+        padding-right: 0;
+        margin-left: 15px;
+        
+    }
+
+    .homepage-books-container .card.book {
+        width: 225px;
+    }
+
+    .u-pull-right {
+        float: left;
+        
+    }
+
+    .books-container .columns:nth-child(3n+1) {
+        margin-left: 15px;
+    }
+    
+}
+
+
+
+
 
 
 
