--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,6 +6,7 @@
   <title>Online Bookshelf</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
   <link rel="stylesheet" href="/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <div class="container">
@@ -22,10 +23,10 @@
           <a href="/login" class="button">Login</a>
           {{/if}}
         </nav>
-        <h1 class="text-center">Online Bookshelf</h1>
+        <h1 class="text-center" style="font-family: 'Raleway', sans-serif;">Online Bookshelf</h1>
       </div>
     </header>
-
+  
     <main class="row">
       <div class="twelve columns">
         {{{body}}}
@@ -38,4 +39,5 @@
   {{/if}}
 </body>
 </html>
+
 
